--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
@@ -19,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "chart.js": "^4.4.7",
+    "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^15.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^5.0.0",
